--- a/css/main.less
+++ b/css/main.less
@@ -1,5 +1,6 @@
 @white: white;
 @red: #ed1c24;
+@blue: blue;
 @font_family_1: 'Raleway', sans-serif;
 @background_black_90: rgba(0,0,0, 0.9);
 @background_white_10: rgba(255,255,255, 0.1);
@@ -18,6 +19,7 @@ html {
 	line-height: 1.4;
 	margin: 0;
 	height: 100%;
+	-webkit-text-size-adjust: 100%;
 }
 
 body {
@@ -71,46 +73,43 @@ header {
 }
 
 div#columns {
-	column-width: 12rem;
+	column-width: 11rem;
 	column-gap: 1rem;
   	width: 90%;
-	max-width: 1100px;
 	margin: 50px auto;
 
-	&:hover figure:not(:hover) {
-		opacity: 0.5;
-	}
-
 	figure {
-		margin: 0 2px 15px;
+		margin: 0 0 1.1rem;
 		padding: 0.05rem;
 		-webkit-column-break-inside: avoid;
 		page-break-inside: avoid;
 		break-inside: avoid;
-		transition: opacity .4s ease-in-out;
 		text-align: center;
-		height: 4em;
-		background: @background_white_10;		
-		border: 1px solid white;
 
 		h2 {
-			color: @white;
 			text-transform: uppercase;
 			letter-spacing: 0.05rem;
-			font-size: 0.7rem;
-			margin-bottom: 0.3rem;
+			font-size: 0.9rem;
+			margin-bottom: 0.1rem;
+			margin-top: 0.4rem;
+			color: @red;
+			background-color: @background_black_90;
+			padding: 0.1rem 0.5rem;
+			display: inline-block;
+			opacity: 0.9;
 		}
 
 		ul {
 			padding: 0;
-			margin-top: 0.1rem;
+			margin: 0;
 
 			li {
 				display: block;
 				list-style: none;
-				margin-left: 0.1rem;
-				font-size: 0.5rem;
+				font-size: 0.8rem;
 				height: 1rem;
+				margin-top: 0.4rem;
+				letter-spacing: 0.02rem;
 			}
 		}
 
