--- a/css/main.less
+++ b/css/main.less
@@ -20,9 +20,12 @@ html {
 	margin: 0;
 	height: 100%;
 	-webkit-text-size-adjust: 100%;
+	font-size: 62.5%;
+	overflow: hidden;
 }
 
 body {
+	overflow: hidden;
 	margin: 0;
 	height: 100%;
 	min-height: 100%;
