--- a/css/main.less
+++ b/css/main.less
@@ -15,16 +15,15 @@
 }
 
 html {
-	color: @white;
 	line-height: 1.4;
 	margin: 0;
+	padding: 0;
 	height: 100%;
-	-webkit-text-size-adjust: 100%;
 	font-size: 62.5%;
-	overflow: hidden;
 }
 
 body {
+	color: @white;
 	overflow: hidden;
 	margin: 0;
 	height: 100%;
@@ -61,45 +60,70 @@ header {
 		text-transform: uppercase;
 		font-weight: 700;
 		color: @white;
-		font-size: 2rem;
 		letter-spacing: 0.1rem;
 		display: block;
+		font-size: 5em;
 
 		span {
 			color: @red;
 			background-color: @background_black_90;
-			padding: 0 0.5rem;
+			padding: 0 2rem;
 			display: inline-block;
-			animation: 0.3s ease-out 0s 1 slideInFromLeft;
+			animation: 0.3s ease 0.1s 1 slideInFromLeft;
 		}
 	}
 }
 
 div#columns {
-	column-width: 11rem;
-	column-gap: 1rem;
-  	width: 90%;
-	margin: 50px auto;
+	display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+	display: flex;
+
+	-webkit-flex-direction: column;
+	flex-direction: column;
+	
+	-webkit-flex-wrap: wrap;
+	flex-wrap: wrap;
+
+	-webkit-justify-content: center;
+	justify-content: center;
+
+	margin: 50px 0 0;
+
+	@media(min-width: 700px) {
+		-webkit-flex-direction: row;
+		flex-direction: row;
+	}
+
+	@media(min-width: 1000px) {
+		-webkit-justify-content: space-around;
+		justify-content: space-around;
+		
+		margin-top: 100px;
+	}
 
 	figure {
-		margin: 0 0 1.1rem;
+		margin: 0 0 5rem;
 		padding: 0.05rem;
-		-webkit-column-break-inside: avoid;
-		page-break-inside: avoid;
-		break-inside: avoid;
 		text-align: center;
+
+		@media(min-width: 700px) {
+			margin: 0 4rem 5rem;
+		}
 
 		h2 {
 			text-transform: uppercase;
 			letter-spacing: 0.05rem;
-			font-size: 0.9rem;
 			margin-bottom: 0.1rem;
 			margin-top: 0.4rem;
 			color: @red;
 			background-color: @background_black_90;
-			padding: 0.1rem 0.5rem;
+			padding: 0.3rem 1rem;
 			display: inline-block;
 			opacity: 0.9;
+			font-size: 2.8em;
 		}
 
 		ul {
@@ -109,10 +133,8 @@ div#columns {
 			li {
 				display: block;
 				list-style: none;
-				font-size: 0.8rem;
-				height: 1rem;
-				margin-top: 0.4rem;
 				letter-spacing: 0.02rem;
+				margin-top: 1rem;
 			}
 		}
 
@@ -121,67 +143,24 @@ div#columns {
 			text-transform: uppercase;
 			text-decoration: none;
 			opacity: 0.8;
-			padding: 0.2rem;
+			font-size: 2.5em;
 
 			&:visited {
-				color: @white;
-				text-transform: uppercase;
-				text-decoration: none;
 				opacity: 0.8;
-				padding: 0.2rem;
 			}
 
 			&:hover {
-				color: @white;
-				text-transform: uppercase;
-				text-decoration: none;
 				color: @red;
 				background: black;
 				opacity: 1;
+				padding: 0.2rem 1rem;
 			}
 
 			&:active {
-				color: @white;
-				text-transform: uppercase;
-				text-decoration: none;
 				color: @red;
 				background: black;
 				opacity: 1;
 			}
-		}
-	}
-}
-
-@media(min-width: 20rem) {
-	html {
-		font-size: 175%;
-	}
-}
-
-@media (min-width: 30rem) {
-	html {
-		font-size: 200%;
-	}
-}
-
-@media (min-width: 80em) {
-	html {
-		font-size: 225%;
-	}
-}
-
-@media only screen and (max-width: 800px) {
-	header {
-		h1 {
-			padding-top: 10%;
-		}
-	}
-
-	#columns {
-		column-gap: 0px;
-
-		figure {
-			width: 100%;
 		}
 	}
 }
