--- a/css/main.less
+++ b/css/main.less
@@ -65,6 +65,7 @@ header {
     color: white;
     text-transform: uppercase;
     font-size: 4.7rem;
+    font-weight: normal;
     letter-spacing: 0.22rem;
     width: auto;
     background: black;
