Add RQ; improve dev/build process

--- a/css/main.less
+++ b/css/main.less
@@ -1,6 +1,6 @@
-@white: white;
+@white: #ffffff;
 @red: #ed1c24;
-@blue: blue;
+@blue: #448CCB;
 @font_family_1: 'Raleway', sans-serif;
 @font_family_2: bebas-neue, sans-serif;
 @background_black_90: rgba(0,0,0, 0.9);
@@ -145,6 +145,13 @@ div#columns {
       li {
         letter-spacing: 0.02rem;
         margin-top: 1rem;
+
+        p {
+          font-size: 1.5em;
+          padding: 0;
+          margin: 0;
+          color: @blue;
+        }
       }
     }
 
